# blazer

./: Cargo.toml  README.md  blazer_rec  build.rs  client_logs.json  grpc-clicker.json
.github/workflows/: check.yml
config/: client.toml  server.toml
src/: app.rs  components.rs  grpc.rs  lib.rs  main.rs  transformers.rs
src/app/: client.rs  errors.rs  layout.rs  model.rs  network.rs  server.rs  types.rs  utils.rs
src/app/client/: components.rs  layout.rs  model.rs  network.rs  transformers.rs  types.rs
src/app/client/components/: bottom_bar.rs  help.rs  menu.rs  network_receptor.rs  room_details.rs
src/app/client/network/: types.rs
src/app/server/: grpc.rs  types.rs
src/app/server/grpc/: functions.rs  grpc.proto  redis_client.rs  server.rs  storage.rs  types.rs  utils.rs
src/app/server/grpc/functions/: ping.rs  room_service.rs
src/app/server/grpc/storage/: interface.rs  models.rs
src/app/server/grpc/storage/interface/: game.rs  room.rs  session.rs  user.rs  users.rs
src/components/: bottom_bar.rs  counter.rs  help.rs  menu.rs  network_receptor.rs  room_details.rs
src/grpc/: grpc.proto  models.rs  redis_client.rs  server.rs  storage.rs  types.rs  utils.rs
src/grpc/routes/: ping.rs  room_service.rs
src/grpc/storage/: interface.rs
tests/: lib.rs  server.rs
