[package]
name = "blazer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.24.0"
tokio = { version = "1.35.1", features = ["macros"] }
tui-realm-stdlib = "1.3.0"
tonic      = "0.7"
prost      = "0.10"
tuirealm = {version = "1.9.1", features = ["ratatui"]}
env_logger = "0.10.1"
log = "0.4.20"
config = "0.13.4"
serde = { version = "1.0.195", features = ["derive"] }

[build-dependencies]
tonic-build = "0.7"
